<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <post
            android:id="@+id/left_item_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>
        <post
            android:id="@+id/left_item_favorites"
            android:icon="@drawable/star"
            android:title="@string/menu_favorites"/>
        <post
            android:id="@+id/left_item_facebook"
            android:icon="@drawable/fb"
            android:title="@string/fbgroup"/>
        <post
            android:id="@+id/left_item_telegram"
            android:icon="@drawable/telegram"
            android:title="@string/ocogram"/>
        <post
            android:id="@+id/left_item_youtube"
            android:icon="@drawable/youtube"
            android:title="@string/youtube"/>
        <post
            android:id="@+id/left_item_mail"
            android:icon="@drawable/envelope"
            android:title="@string/ocomail"/>
        <post
            android:id="@+id/left_item_settings"
            android:icon="@drawable/controls"
            android:title="@string/settings"/>
    </group>
</menu>